--- a/breakpoints.css
+++ b/breakpoints.css
@@ -17,3 +17,25 @@
     padding: 16px 90px;
   }
 }
+
+@media (max-width: 600px) {
+  #level-title {
+    font-size: 2rem;
+    margin: 50px 15px 30px;
+  }
+
+  .btn {
+    margin-bottom: 10px;
+    display: inline-block;
+    height: 150px;
+    width: 150px;
+    border: 7px solid black;
+    border-radius: 20px;
+  }
+
+  .start-button {
+    margin: 50px 0 0;
+    padding: 20px 100px;
+    font-size: 1.6rem;
+  }
+}
