--- a/breakpoints.css
+++ b/breakpoints.css
@@ -25,12 +25,12 @@
   }
 
   .btn {
-    margin-bottom: 10px;
+    margin: 10px ;
     display: inline-block;
     height: 150px;
     width: 150px;
     border: 7px solid black;
-    border-radius: 20px;
+    border-radius: 30px;
   }
 
   .start-button {
