--- a/styles.css
+++ b/styles.css
@@ -45,19 +45,18 @@ body {
 
 .red {
   background-color: red;
-  background-image: linear-gradient(to bottom, rgb(220, 0, 0), rgb(128, 0, 0), rgb(220, 0, 0));
 }
 
 .green {
-  background-image: linear-gradient(to bottom, rgb(0, 160, 0), rgb(0, 93, 0), rgb(0, 160, 0));
+  background-color: green;
 }
 
 .blue {
-  background-image: linear-gradient(to bottom, rgb(0, 0, 180), rgb(0, 0, 110), rgb(0, 0, 180));
+  background-color: blue;
 }
 
 .yellow {
-  background-image: linear-gradient(to bottom, rgb(255, 255, 0), rgb(156, 156, 0), rgb(255, 255, 0));
+  background-color: yellow;
 }
 
 .pressed {
